<resources>
    <string name="app_name">Lab1</string>

    <string name="weightText">Weight</string>
    <string name="weightUnitsText_metric">[kg]</string>
    <string name="weightUnitsText_imperial">[lb]</string>
    <string name="heightText">Height</string>
    <string name="heightUnitsText_metric">[m]</string>
    <string name="heightUnitsText_imperial">[in]</string>
    <string name="weightHintText">Input your weight</string>
    <string name="heightHintText">Input your height</string>
    <string name="fieldEmptyErrorText">This field can\'t be empty!</string>
    <string name="fieldValueTooLowErrorText">Minimum value for this field is %.1f!</string>
    <string name="fieldValueTooHighErrorText">Maximum value for this field is %.1f!</string>
    <string name="bmiCalculateButtonText">Calculate BMI</string>
    <string name="bmiValueText">BMI Value</string>

    <string name="underweight3Text">severely underweight</string>
    <string name="underweight2Text">moderately underweight</string>
    <string name="underweight1Text">underweight</string>
    <string name="normalRangeText">in normal range</string>
    <string name="overweightText">overweight</string>
    <string name="obese1Text">obese (Class I)</string>
    <string name="obese2Text">obese (Class II)</string>
    <string name="obese3Text">obese (Class III)</string>

    <string name="bmiFinalText">Your BMI is equal to %.1f, you are %s</string>

    <string name="optionsUnitSwitchMetric">Metric</string>
    <string name="optionsUnitSwitchImperial">Imperial</string>
    <string name="optionsUnitSwitch">Switch units:</string>
    <string name="optionsSavedMeasurements">Saved Measurements</string>

    <string name="optionsViewCredits">Author Information</string>
    <string name="creditsAuthorInformation">Copyright © 2022, Marcin Bernacki</string>

    <string name="savedMeasurementsFileAmount">SAVED_MEASUREMENTS_AMOUNT</string>
    <string name="savedMeasurementsFileKey">SAVED_MEASUREMENTS_KEY</string>
    <string name="savedMeasurementsFileWeightKey">SAVED_MEASUREMENTS_WEIGHT_</string>
    <string name="savedMeasurementsFileHeightKey">SAVED_MEASUREMENTS_HEIGHT_</string>
    <string name="savedMeasurementsFileBMIKey">SAVED_MEASUREMENTS_BMI_</string>
    <string name="options_toolbarTitle">Options</string>
    <string name="measurements_history_toolbarTitle">Measurements History</string>
    <string name="credits_toolbarTitle">Credits</string>
    <string name="clear_saved_data">Clear saved data</string>
</resources>