<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_measurements_history_row_item"
    android:layout_marginRight="@dimen/margin_measurements_history_row_item"
    android:orientation="horizontal"
    android:gravity="center">

    <TextView
        android:id="@+id/recycler_row_weightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/weightText"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/recycler_row_heightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/heightText"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/recycler_row_bmiTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bmiValueText"
        android:textSize="24sp" />

</LinearLayout>